--- a/src/app/pages/product-detail-DRAFT/product-detail-draft.component.html
+++ b/src/app/pages/product-detail-DRAFT/product-detail-draft.component.html
@@ -4,27 +4,41 @@
   <div class="prod-detail">
     <div class="row">
       <div class="col-2">
-        <div class="mbt" *ngFor="let item of data">
-          <img src="{{item.url}}">
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/product-detail/detail1.png">
+          </a>
+        </div>
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/product-detail/detail2.png">
+          </a>
+        </div>
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/product-detail/detail3.png">
+          </a>
         </div>
       </div>
-      <div class="col-6" *ngFor="let item of data | slice: 0: 1">
-        <img src="{{item.url}}">
+      <div class="col-6">
+        <a href="#">
+          <img src="./assets/img/product-detail/detail4.png">
+        </a>
       </div>
-      <div class="col-4" *ngFor="let item of data | slice: 0: 1">
+      <div class="col-4">
         <!--Breadcrumb-->
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a routerLink="/home">Home</a></li>
-            <li class="breadcrumb-item"><a routerLink="/shop-all">Shop all</a></li>
-            <li class="breadcrumb-item"><a routerLink="/category/{{item.cid}}">{{item.cate_name}}</a></li>
-            <li class="breadcrumb-item"><a routerLink="/category/{{item.sid}}">{{item.sub_name}}</a></li>
+            <li class="breadcrumb-item"><a href="#" routerLink="/home">Home</a></li>
+            <li class="breadcrumb-item"><a href="#" routerLink="/shop-all">Shop all</a></li>
+            <li class="breadcrumb-item"><a href="#" routerLink="/sub-category">Rings</a></li>
           </ol>
         </nav>
-
-        <p class="mdt">{{item.collection}}</p>
-        <h5>{{item.name}}</h5>
-        <h5 class="my-2">${{item.price}}</h5>
+        <a href="#">
+          <p class="mdt">AGURI'S ETERNITY MAGIC</p>
+        </a>
+        <h5>Diamond and Gold Spark Ring</h5>
+        <h5 class="my-2">$6,700</h5>
         <p class="mdt">Complimentary Shipping & Returns</p>
         <div class="line mb-3"></div>
         <div class=d-flex>
@@ -221,7 +235,16 @@
             </a>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                <p class="smt">{{item.description}}</p>
+               <p class="smt">Tiffany T1 designs reinvent our iconic Tiffany T collection with bold profiles and powerful details.
+                 These hoop earrings are precisely crafted in 18k rose gold and feature a beveled edge traced with round brilliant diamonds.
+                 Wear on their own as a striking statement or style with a mix of stud earrings for an unexpected look.
+               </p>
+                <ul>
+                  <li class="smt">18k rose gold with round brilliant diamonds</li>
+                  <li class="smt">Size extra small</li>
+                  <li class="smt">Carat total weight .40</li>
+                  <li class="smt">Product number:69782981</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -229,7 +252,6 @@
       </div>
     </div>
   </div>
-
   <!--SIMILAR-PRODUCT-->
   <div class="simi-prod">
     <div class="row">
@@ -275,7 +297,6 @@
       </div>
     </div>
   </div>
-
   <!-- Modal Compare-->
   <div class="modal fade" id="compare">
     <div class="modal-dialog modal-dialog-centered">
@@ -335,7 +356,6 @@
     </div>
   </div>
 </div>
-
 <!--MAY YOU ALSO LIKE-->
 <div class="also-like">
   <h5 class="text-center">You May Also Like</h5>
@@ -571,8 +591,8 @@
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselalsolike" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselalsolike" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -580,81 +600,79 @@
     </button>
   </div>
 </div>
-
-<!--Modal Quick view-->
-<div class="modal fade " id="quickview">
-  <div class="modal-dialog modal-dialog-centered quickview">
-    <div class="modal-content">
-      <div class="row">
-        <div class="col-7 ps-0">
-          <!--Carousel quick view product-->
-          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="5000">
-                <img src="./assets/img/product-detail/quickview1.png">
+  <!--Modal Quick view-->
+  <div class="modal fade " id="quickview">
+    <div class="modal-dialog modal-dialog-centered quickview">
+      <div class="modal-content">
+        <div class="row">
+          <div class="col-7 ps-0">
+            <!--Carousel quick view product-->
+            <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
               </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview2.png">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview3.png">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/product-detail/quickview4.png">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="5000">
+                  <img src="./assets/img/product-detail/quickview1.png">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                  <img src="./assets/img/product-detail/quickview2.png">
+                </div>
+                <div class="carousel-item" data-bs-interval="3000">
+                  <img src="./assets/img/product-detail/quickview3.png">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/img/product-detail/quickview4.png">
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-5 pe-0">
-          <h5>Diamond Wire Ring</h5>
-          <h5 class="my-3">$7,000</h5>
-          <div class="d-flex">
-            <p class="mdt me-auto">Quantity</p>
-            <span class="buttons_added ml-1">
+          <div class="col-5 pe-0">
+            <h5>Diamond Wire Ring</h5>
+            <h5 class="my-3">$7,000</h5>
+            <div class="d-flex">
+              <p class="mdt me-auto">Quantity</p>
+              <span class="buttons_added ml-1">
                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
               </span>
+            </div>
+            <div class="line"></div>
+            <div class="quick-size my-3">
+              <select class="form-select smt">
+                <option selected>Select size</option>
+                <option value="1">3</option>
+                <option value="2">3 1/2</option>
+                <option value="3">4</option>
+                <option value="3">4 1/2</option>
+                <option value="3">5</option>
+                <option value="3">5 1/2</option>
+              </select>
+            </div>
+            <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
+            <a href="">
+              <p>View more detail</p>
+            </a>
           </div>
-          <div class="line"></div>
-          <div class="quick-size my-3">
-            <select class="form-select smt">
-              <option selected>Select size</option>
-              <option value="1">3</option>
-              <option value="2">3 1/2</option>
-              <option value="3">4</option>
-              <option value="3">4 1/2</option>
-              <option value="3">5</option>
-              <option value="3">5 1/2</option>
-            </select>
-          </div>
-          <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
-          <a href="">
-            <p>View more detail</p>
-          </a>
         </div>
       </div>
     </div>
   </div>
-</div>
-
 <!--REVIEW-->
 <div class="review">
   <div class="d-flex review-start">
-    <h3>4,9</h3>
-    <div class="d-flex my-auto">
-      <i class="fa-solid fa-star fa-xl"></i>
-      <i class="fa-solid fa-star fa-xl"></i>
-      <i class="fa-solid fa-star fa-xl"></i>
-      <i class="fa-solid fa-star fa-xl"></i>
-      <i class="fa-solid fa-star fa-xl"></i>
+      <h3>4,9</h3>
+      <div class="d-flex my-auto">
+        <i class="fa-solid fa-star fa-xl"></i>
+        <i class="fa-solid fa-star fa-xl"></i>
+        <i class="fa-solid fa-star fa-xl"></i>
+        <i class="fa-solid fa-star fa-xl"></i>
+        <i class="fa-solid fa-star fa-xl"></i>
+      </div>
+      <p class="mdt my-auto">16 Reviews</p>
     </div>
-    <p class="mdt my-auto">16 Reviews</p>
-  </div>
   <div class="row">
     <div class="col-2">
       <h5>Reviews</h5>
@@ -710,31 +728,31 @@
   <div class="review-box container">
     <div class="d-flex review-inner">
       <div class="review-ava">
-        <img src="./assets/img/product-detail/user1.png">
-      </div>
+          <img src="./assets/img/product-detail/user1.png">
+        </div>
       <div class="review-content w-100 ms-3">
-        <div class="d-flex">
-          <p class="me-auto mb10 user-name mdt">HueVT99</p>
-          <span class="smt">2022/12/02</span>
-        </div>
-        <div>
-          <div class="d-flex rate-start">
-            <i class="fa-solid fa-star fa"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+          <div class="d-flex">
+            <p class="me-auto mb10 user-name mdt">HueVT99</p>
+            <span class="smt">2022/12/02</span>
+          </div>
+          <div>
+            <div class="d-flex rate-start">
+              <i class="fa-solid fa-star fa"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+          <div class="d-flex">
+            <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t
+              say for certain what you’ll need to adjust it to.</p>
+            <div class="like-review">
+              <i class="align-middle fa-regular fa-heart fa-lg"></i>
+              <span class="smt ms-2">19</span>
+            </div>
           </div>
         </div>
-        <div class="d-flex">
-          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t
-            say for certain what you’ll need to adjust it to.</p>
-          <div class="like-review">
-            <i class="align-middle fa-regular fa-heart fa-lg"></i>
-            <span class="smt ms-2">19</span>
-          </div>
-        </div>
-      </div>
     </div>
     <div class="line mb-3"></div>
     <div class="d-flex review-inner">
@@ -854,3 +872,5 @@
     </div>
   </div>
 </div>
+
+
