--- a/src/app/pages/sub-category/sub-category.component.html
+++ b/src/app/pages/sub-category/sub-category.component.html
@@ -1,4 +1,4 @@
-Hello {{subId}}
+Hello {{sid}}
 <div class="container">
   <div class="row">
     <div class="col-3" *ngFor="let item of data | slice:0:2">
