--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,141 +1,143 @@
 
 <!--Showcase-->
-<div class="container aguri-showcase mbt-120">
-  <div class="row">
-    <div class="col-6 showcase-main-img row">
-      <div id="carousel-main" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="2000">
-            <div class="col-10 showcase-img">
-              <a routerlink="#">
-                <img src="./assets/img/home/showcase-b1.png">
-              </a>
+<div class="container">
+  <div class="aguri-showcase mbt-120">
+    <div class="row">
+      <div class="col-6 showcase-main-img row">
+        <div id="carousel-main" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2000">
+              <div class="col-10 showcase-img">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-b1.png">
+                </a>
+              </div>
+              <div class="decor-showcase-slide">
+                  <a class="round-button"><i class="fa-regular fa-arrow-right fa-3x"></i></a>
+              </div>
             </div>
-            <div class="decor-showcase-slide">
-              <a routerLink="#"><h6>View Detail</h6></a>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="col-10 showcase-img">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-b2.png">
+                </a>
+              </div>
+              <div class="decor-showcase-slide">
+                <a routerLink="#"><h6>View Detail</h6></a>
+              </div>
             </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <div class="col-10 showcase-img">
-              <a routerlink="#">
-                <img src="./assets/img/home/showcase-b2.png">
-              </a>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="col-10 showcase-img">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-b3.png">
+                </a>
+              </div>
+              <div class="decor-showcase-slide">
+                <a routerLink="#"><h6>View Detail</h6></a>
+              </div>
             </div>
-            <div class="decor-showcase-slide">
-              <a routerLink="#"><h6>View Detail</h6></a>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <div class="col-10 showcase-img">
-              <a routerlink="#">
-                <img src="./assets/img/home/showcase-b3.png">
-              </a>
-            </div>
-            <div class="decor-showcase-slide">
-              <a routerLink="#"><h6>View Detail</h6></a>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <div class="col-10 showcase-img">
-              <a routerlink="#">
-                <img src="./assets/img/home/showcase-b4.png">
-              </a>
-            </div>
-            <div class="decor-showcase-slide">
-              <a routerLink="#"><h6>View Detail</h6></a>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="col-10 showcase-img">
+                <a routerlink="#">
+                  <img src="./assets/img/home/showcase-b4.png">
+                </a>
+              </div>
+              <div class="decor-showcase-slide">
+                <a routerLink="#"><h6>View Detail</h6></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-8 ps-0 showcase-content">
-      <div class="showcase-title row">
-        <div class="col-8">
-          <p class="decor-text mb-2">AGURI'S COLLECTION</p>
-          <h5 class="mb-3">All Our Beautiful Collection</h5>
-          <p class="smt">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus laoreet turpis dignissim condimentum. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
+      <div class="col-8 ps-0 showcase-content">
+        <div class="showcase-title row">
+          <div class="col-8">
+            <p class="decor-text mb-2">AGURI'S COLLECTION</p>
+            <h4 class="mb-3">All Our Beautiful Collection</h4>
+            <p class="smt">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus laoreet turpis dignissim condimentum. Lorem
+              ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+          </div>
+          <div class="col-2"></div>
         </div>
-        <div class="col-2"></div>
-      </div>
-      <!--carousel-showcase-small-img-->
-      <div id="carousel-sub" class="carousel-dark carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="2000">
-            <div class="row">
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s1.png">
-                </a>
-              </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s2.png">
-                </a>
-              </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s3.png">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <div class="row">
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s4.png">
-                </a>
-              </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s6.png">
-                </a>
-              </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s5.png">
-                </a>
+        <!--carousel-showcase-small-img-->
+        <div id="carousel-sub" class="carousel-dark carousel slide carousel-fade" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2000">
+              <div class="row">
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s1.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s2.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s3.png">
+                  </a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <div class="row">
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s3.png">
-                </a>
-              </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s4.png">
-                </a>
-              </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s6.png">
-                </a>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="row">
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s4.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s6.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s5.png">
+                  </a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <div class="row">
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s5.png">
-                </a>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="row">
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s3.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s4.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s6.png">
+                  </a>
+                </div>
               </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s3.png">
-                </a>
-              </div>
-              <div class="col-4">
-                <a routerlink="#">
-                  <img src="./assets/img/home/showcase-s4.png">
-                </a>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="row">
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s5.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s3.png">
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a routerlink="#">
+                    <img src="./assets/img/home/showcase-s4.png">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
