--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -13,17 +13,29 @@
   right:0px;
 }
 .showcase-title{
-  padding-top:60px;
-  margin-bottom:45px;
+  padding-top:70px;
+  margin-bottom:40px;
 }
 .showcase-img{
   position:relative;
 }
 .decor-showcase-slide{
   position: absolute;
-  left:160px;
-  top:63%;
-
+  left:165px;
+  top:61%;
+}
+.round-button{
+  border: 2px solid #fff;
+  border-radius: 100%;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.round-button i{
+  padding:0px 3px;
+  color:#fff;
 }
 /*All jewellery*/
 .item-box-content a{
