--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -27,6 +27,8 @@
         <h5 class="my-2">${{item.price}}</h5>
         <p class="mdt">Complimentary Shipping & Returns</p>
         <div class="line mb-3"></div>
+
+        <!--quantity-->
         <div class=d-flex>
           <p class="mdt me-auto">Quantity</p>
           <span class="buttons_added ml-1">
