--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,9 @@
                 </a>
               </div>
               <div class="decor-showcase-slide">
-                  <a class="round-button"><i class="fa-regular fa-arrow-right fa-3x"></i></a>
+                  <a class="round-button">
+                    <i class="fa-solid fa-arrow-right fa-2x"></i>
+                  </a>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
@@ -23,7 +25,9 @@
                 </a>
               </div>
               <div class="decor-showcase-slide">
-                <a routerLink="#"><h6>View Detail</h6></a>
+                <a class="round-button">
+                  <i class="fa-solid fa-arrow-right fa-2x"></i>
+                </a>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
@@ -33,7 +37,9 @@
                 </a>
               </div>
               <div class="decor-showcase-slide">
-                <a routerLink="#"><h6>View Detail</h6></a>
+                <a class="round-button">
+                  <i class="fa-solid fa-arrow-right fa-2x"></i>
+                </a>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
@@ -43,7 +49,9 @@
                 </a>
               </div>
               <div class="decor-showcase-slide">
-                <a routerLink="#"><h6>View Detail</h6></a>
+                <a class="round-button">
+                  <i class="fa-solid fa-arrow-right fa-2x"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -51,7 +59,7 @@
       </div>
       <div class="col-8 ps-0 showcase-content">
         <div class="showcase-title row">
-          <div class="col-8">
+          <div class="col-8 showcase-title-inner">
             <p class="decor-text mb-2">AGURI'S COLLECTION</p>
             <h4 class="mb-3">All Our Beautiful Collection</h4>
             <p class="smt">
@@ -680,7 +688,7 @@
 </div>
 
 <!--New collection-->
-<div class="">
+<div class="aguri-collection">
   <div class=" new-collection mbt-120 container">
     <div class="row">
       <div class="col-5 new-collection-left ps-0">
@@ -724,12 +732,12 @@
   <div class="container">
     <h4 class="text-center mb-5">The Aguri Experience</h4>
     <div class="row">
-      <div class="col-4 text-center ps-0">
-        <div class="px-4">
+      <div class="col-4 text-center ps-0 experience-user">
+        <div class="px-4 experience-inner">
           <i class="fa-regular fa-truck fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
           <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-          <a class="decor-text" routerLink="#">Learn more <i class="fa-regular fa-arrow-right"></i></a>
+          <a class="decor-text" routerLink="#">Learn more <i class="fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-4 text-center">
@@ -737,7 +745,7 @@
           <i class="fa-regular fa-calendar fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
           <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-          <a class="decor-text" routerLink="#">Book now <i class="fa-regular fa-arrow-right"></i></a>
+          <a class="decor-text" routerLink="#">Book now <i class="fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-4 text-center pe-0">
@@ -745,7 +753,7 @@
           <i class="fa-regular fa-gift fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
           <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-          <a class="decor-text" routerLink="#">Explore gift <i class="fa-regular fa-arrow-right"></i></a>
+          <a class="decor-text" routerLink="#">Explore gift <i class="fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
@@ -845,5 +853,7 @@
     </div>
   </div>
 </div>
+
+
 
 
