--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
         <!--top-page-left-->
         <div class="col-3">
           <ul class="d-flex justify-content-start">
-            <li class="p-2"><a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-lg fa-facebook"></i></a></li>
-            <li class="p-2"><a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-lg fa-instagram"></i></a></li>
-            <li class="p-2"><a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-lg fa-pinterest"></i></a></li>
+            <li class="py-1"><a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-lg fa-facebook"></i></a></li>
+            <li class="py-1 px-3"><a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-lg fa-instagram"></i></a></li>
+            <li class="py-1"><a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-lg fa-pinterest"></i></a></li>
           </ul>
         </div>
         <!--logo-->
@@ -20,18 +20,18 @@
         <!--top-page-right-->
         <div class="col-3">
           <ul class="d-flex justify-content-end">
-            <li class="p-2">
+            <li class="py-1">
               <!--Modal Sign In Button-->
               <a class="sign-in" data-bs-toggle="modal" type="button" data-bs-target="#signin">Sign in</a>
             </li>
-            <li class="p-2"><i class="fa fa-shopping-cart fa-lg"></i></li>
+            <li class="px-3 py-1"><i class="fa fa-shopping-cart fa-lg"></i></li>
             <!--search-button-start-->
-            <li class="p-2 search-button dropdown">
-              <i class="fa fa-search fa-lg"></i>
-              <div class="dropdown-content">
-                <input type="text" placeholder="Search AGURI">
-              </div>
-            </li>
+            <div class="search-box">
+                <input class="text" placeholder="search...">
+                <a routerLink="#" class="iconsearch">
+                  <i class="fa fa-search fa-lg"></i>
+                </a>
+            </div>
             <!--search-button-end-->
           </ul>
         </div>
