--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -30,7 +30,9 @@
             <label>Message (*)</label>
             <textarea class="inpu" rows="4" required></textarea>
           </div>
-          <button class="btn btn-pri btlg" type="submit">Send it</button>
+          <div class="text-center">
+              <button class="d-inline-block btn btn-pri btlg" type="submit">Send it</button>
+          </div>
         </form>
       </div>
       <div class="col-4 contact-text">
