--- a/src/styles.css
+++ b/src/styles.css
@@ -155,16 +155,31 @@ label{
   padding-top:20px;
   padding-bottom:20px;
 }
-/*dropdown-search-button*/
-.search-button .dropdown-content {
-  margin: 10px 0;
-  padding: 20px;
-  transform: translateX(-200px);
-  width: max-content;
+/*search-box*/
+.search-box{
+  border-radius: 20px;
+  padding:4px 6px;
 }
-.search-button .dropdown-content input {
-  padding: 5px 10px;
+.search-box:hover{
+  border: 1px solid #000;
 }
+.search-box:hover > input{
+  width:120px;
+  padding: 0px 2px;
+  color:#000;
+}
+input{
+  width:0px;
+  border: none;
+  padding:0;
+  background: none;
+  font-size: 14px;
+  transition: 0.5s ease;
+}
+.iconsearch{
+  transition: 0.4s;
+}
+
 /*NAV*/
 .nav-link{
   padding:0px;
@@ -396,3 +411,5 @@ nav li:nth-child(1){
   bottom:0px;
   left:0px;
 }
+
+
