--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-3">
-        <h5 class="">Introdution</h5>
+        <h5 class="">Introduction</h5>
       </div>
       <div class="dear-content col-8">
         <p class="smt">AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
